fix: correção de problemas SonarQube no frontend
- quantidade-input.component.ts: Remove importação não utilizada de 'inject' e consolida múltiplas importações de '@angular/forms'
- chip-input.component.ts: Refatora condição negada no método processarValor para evitar negação
- lotacao-maxima-page.component.ts: Simplifica método deveExibirErro e extrai operação ternária aninhada
- lotacao-maxima-page.component.html: Substitui span pelo elemento output para melhor acessibilidade

Todos os testes passam e o build é bem-sucedido.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>